; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_combo.c_strdupA.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_combo.c_strdupA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @strdupA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @strdupA(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %22

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i64 @strlen(i32 %10)
  store i64 %11, i64* %5, align 8
  %12 = call i32 (...) @GetProcessHeap()
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %13, 1
  %15 = call i8* @HeapAlloc(i32 %12, i32 0, i64 %14)
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* %3, align 4
  %18 = load i64, i64* %5, align 8
  %19 = add nsw i64 %18, 1
  %20 = call i32 @memcpy(i8* %16, i32 %17, i64 %19)
  %21 = load i8*, i8** %4, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %9, %8
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i64 @strlen(i32) #1

declare dso_local i8* @HeapAlloc(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @memcpy(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
